--- a/Axle/Axle.Backend/Axle.Backend.vcxproj
+++ b/Axle/Axle.Backend/Axle.Backend.vcxproj
@@ -11,15 +11,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{42763B67-48DB-4B21-8BFB-4EF20C10623E}</ProjectGuid>
-    <RootNamespace>AxleCore</RootNamespace>
+    <ProjectGuid>{66BFE4BC-BA49-4499-9B23-D4864463D615}</ProjectGuid>
+    <RootNamespace>AxleBackend</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -34,12 +34,10 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\Solution\Axle.props" />
-    <!--<Import Project="$(SolutionDir)\Axle.props" />-->
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\Solution\Axle.props" />
-    <!--<Import Project="$(SolutionDir)\Axle.props" />-->
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup />
@@ -68,16 +66,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Axle.h" />
-    <ClInclude Include="AxleGlobal.h" />
+    <ClInclude Include="Class.h" />
+    <ClInclude Include="Member.h" />
+    <ClInclude Include="Scope.h" />
+    <ClInclude Include="Variable.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Axle.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Axle.Backend\Axle.Backend.vcxproj">
-      <Project>{66bfe4bc-ba49-4499-9b23-d4864463d615}</Project>
-    </ProjectReference>
+    <ClCompile Include="Class.cpp" />
+    <ClCompile Include="Member.cpp" />
+    <ClCompile Include="Scope.cpp" />
+    <ClCompile Include="Variable.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
