Added Sublime Text and Merge sections.

--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,14 @@ $RECYCLE.BIN/
 *.resources
 test-results/
 
+### SublimeText ###
+# workspace files are user-specific
+*.sublime-workspace
+*.sublime-project
+
+# Merge leftovers
+*.orig
+
 # ========================
 # Dash stuffs
 # ========================
